--- a/css/style.css
+++ b/css/style.css
@@ -161,6 +161,7 @@ h3.pro-short-desc-title {
 	color: #000;
 	border-bottom: 1px solid #e5e5e5;
 	margin-bottom: 20px;
+	padding-bottom: 15px;
 }
 
 .pro-desc {
